--- a/submit.html
+++ b/submit.html
@@ -7,26 +7,9 @@
   
 </head><body>
 
-<form method="post">
-				Basic information about how to submit photos.<br>
-				<br>
-				<p class="style2">Select Picture (required):&nbsp; &nbsp;
-				<input name="File1" style="width: 292px;" type="file"></p>
-				<p class="style2">Picture Title
-				(required):&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<input name="Text1" style="width: 236px;" type="text"></p>
-				<p class="style2">Email Address (required):&nbsp;&nbsp; 				<input name="Text2" style="width: 234px;" type="text"></p>
-				<textarea name="TextArea1" style="width: 402px; height: 89px;"></textarea></form>
-
-				
-<p class="style2">
-				<input name="Radio1" checked="unchecked" value="V1" type="radio"> I agree to all terms and conditions:&nbsp;</p>
-
-				
-<form method="post" action="--WEBBOT-SELF--">
-				<!--webbot bot="SaveResults" S-Email-Address="dkauffman88@gmail.com" S-Email-Format="TEXT/PRE" startspan --><input name="VTI-GROUP" value="0" type="hidden"><!--webbot bot="SaveResults" i-checksum="43374" endspan -->
-				<a href="submitdone.htm">
-				<input name="Submit2" value="Submit Picture" type="submit"></a></form>
-
+<form enctype='multipart/form-data' method='post' action='./submit_image.php'>
+    Path:<input id='path' name='pic' type='file' />
+    <input type='submit' value='Submit'/>
+</form>
 
 </body></html>
