Many Changes, read on! Drop shadows on images instead of image container Draw buttons reloads page Slightly better submit page Winner & Loser on left Page visual layout slightly adjusted

--- a/submit.html
+++ b/submit.html
@@ -1,14 +1,40 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-  
-  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-  <title>submit.html</title>
+<!DOCTYPE HTML>
+<html>
+<head>
+
+    <META http-equiv="baby-vote" content="text/html; charset=utf-8"/>
+    <META name="description" content="baby-vote.com vote on the cutest baby pictures on the web!"/>
+    <META name="keywords" content="baby,baby war,babies,best,cute,cutest,cuter,choose,cute baby,cute babies,smiling babies,smiling baby,happy baby" />
+    <link rel="stylesheet" type="text/css" href="style.css" charset="utf-8"/>
+    <title>Submit - baby-vote.com</title>
 
   
-</head><body>
+</head>
 
+<body>
+
+<header>
+<img alt="B" src="../letters/b.jpg" />
+<img alt="A" src="../letters/a.jpg" />
+<img alt="B" src="../letters/b.jpg" />
+<img alt="Y" src="../letters/y.jpg" />
+<img alt="-" src="../letters/-.jpg" />
+<img alt="V" src="../letters/largev.jpg" />
+<img alt="O" src="../letters/o.jpg" />
+<img alt="T" src="../letters/t.jpg" />
+<img alt="E" src="../letters/e.jpg" />
+</header>
+
+<nav>
+<a href="./index.php"><strong>Home</strong></a> | 
+<a href="./submit.html"><strong>Submit Baby Pictures</strong></a>
+</nav>
+
+<br/>
+<br/>
+<p>Use the form below to submit your own baby images!</p><br/>
 <form enctype='multipart/form-data' method='post' action='./submit_image.php'>
-    Path:<input id='path' name='pic' type='file' />
+    Path : <input id='path' name='pic' type='file' />
     <input type='submit' value='Submit'/>
 </form>
 
