Changed the logo at the top.

--- a/submit.html
+++ b/submit.html
@@ -14,15 +14,7 @@
 <body>
 
 <header>
-<img alt="B" src="../letters/b.jpg" />
-<img alt="A" src="../letters/a.jpg" />
-<img alt="B" src="../letters/b.jpg" />
-<img alt="Y" src="../letters/y.jpg" />
-<img alt="-" src="../letters/-.jpg" />
-<img alt="V" src="../letters/largev.jpg" />
-<img alt="O" src="../letters/o.jpg" />
-<img alt="T" src="../letters/t.jpg" />
-<img alt="E" src="../letters/e.jpg" />
+<img alt="BABY-VOTE" src="../letters/header.jpg" />
 </header>
 
 <nav>
