--- a/about.html
+++ b/about.html
@@ -5,82 +5,14 @@
   <meta name="keywords" content="baby,baby war,babies,best,cute,cutest,cuter,choose,cute baby,cute babies,smiling babies,smiling baby,happy baby">
   <title>Baby War - Vote for the cutest baby!</title>
 
+</head>
 
-  <style type="text/css">
-.style1 {
-text-align: center;
-}
-.style2 {
-text-align: right;
-}
+<!-- Head ends / Body begins -->
+<body>
+<header>
+<img alt="BABY-VOTE" src="./letters/header.jpg" />
+</header>
 
-.imgcontainer {
-position:relative;
-float:right;
-}
+<!-- color: rgb(52,202,186); "We are going to improve your life and the world one click at a time. Our website improves the health and happiness of all. Clinical trials have shown that viewing smiling babies improves mental and physical well-being (especially among females). Our website exploits this phenomenon and provides users with their daily-dose of Vitamin CB (Cute Babies) that they need to remain happy and healthy. We have an abundant supply of Vitamin CB and would like to share it with as many people as possible. Whether you have a few minutes or a life-time we are confident that you will be glad you visited. Also, every time you cast a vote on Baby-Vote we make a charitable donation. We are going to help you improve the world, one click at a time. A portion of all of our proceeds is allocated to help feed starving children in third world countries. Nearly 97% of the population of Tanzania lives on less than $2 a day. We are doing what we can to help reduce starvation and improve the world."  -->
 
-
-
-.imgcontainer1 {
-position:relative;
-float:left;
-}
-.stylepink {
-color:#FF00FF;
-text-align: center;
-
-}
-.styleblue {
-color:#56BAEC;
-text-align: center;
-
-}
-.caption1 {
-position:absolute;
-bottom:+10;
-left:0;
-text-align:center;
-font-size:x-large;
-background:#fff;
-width:100%;
-color:#000;
-}
-
-  </style>
-  <script language="JavaScript"><!--
-
-var pictures = ["Baby Blues", "Ballet Baby", "Bubble Cheeks", "Exhausted", "Laughter", "Not Enough Toys", "A Handful", "Blinded By The Light", "Blue Eyed Blondie", "Bridesmaid", "Bubble Bath", "Bubble Fun", "Cereal Again", "Charlie Brown", "Chubby Cheeks", "Cold Water", "Cool Pink", "Counting Sheep", "Dark Eyes", "Do I Know You", "Drool Drop", "Elephant Surprise", "Fish Lips", "Flower Child", "Fly Away Hair", "Future Business Man", "Future Ceo", "Giggle", "Hi Grandma", "Hidden Smile", "I Like Hot Dogs", "I See You", "Lacy Blue", "Little Budda", "Merry Maid", "Need More Curls", "New Slippers", "On The Move", "Outside Fun", "Peekaboo", "Pretty In Purple", "Red Rover", "Rudy", "Santa's Elf", "Scared Silly", "Shark Tank", "Snow Angel", "Soft & Dangerous", "Sweet Dreams", "Sweet Fingers", "Sweet Pose", "Tell Me Again", "Tongue Tied", "Toothless Smile", "Troubled Times", "Watch Me Crawl", "What's Going On", "Whistling Willy", "Why Not", "Wonder Child", "Wrinkles"];
-
-var t = 001;
-var h = pictures.length-1;
-var r = (Math.floor(Math.random()*h)+1);
-var s = (Math.floor(Math.random()*h)+1);
-if (r=s)
-{
-s = r--;
-}
-
-var a = 999 - r;
-var b = 999 - s;
-var w = 999 - t;
-var picture = pictures[r];
-var picture1 = pictures[s];
-var picturew = pictures[t];
-// --></script>
-  <meta content="Daniel Kauffman" name="author">
-
-</head><body style="color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);" alink="fuchsia" link="fuchsia" vlink="#990099">
-<div style="text-align: center;"><img style="width: 88px; height: 88px;" alt="B" src="../letters/b.jpg"><img style="width: 88px; height: 88px;" alt="A" src="../letters/a.jpg"><img style="width: 88px; height: 88px;" alt="B" src="../letters/b.jpg"><img style="width: 88px; height: 88px;" alt="Y" src="../letters/y.jpg"><img style="width: 88px; height: 88px;" alt="-" src="../letters/-.jpg"><img style="width: 88px; height: 88px;" alt="V" src="../letters/largev.jpg"><img style="width: 88px; height: 88px;" alt="O" src="../letters/o.jpg"><img style="width: 88px; height: 88px;" alt="T" src="../letters/t.jpg"><img style="width: 88px; height: 88px;" alt="E" src="../letters/e.jpg"></div>
-
-<p style="color: fuchsia;" class="stylepink"><a rel="me" href="../index.html"><strong>Home</strong></a><strong>&nbsp;|&nbsp;<a rel="me" href="search.html">Search</a>&nbsp;|&nbsp;<a rel="me " href="beautiful.html">Beautiful
-Babies</a>&nbsp;|&nbsp;<a rel="me" href="ugly.html">Ugly Babies</a>&nbsp;|&nbsp;<a rel="tag" href="upload.html">Submit
-Baby Pictures</a>&nbsp;|&nbsp;<a rel="tag" href="about.html">About Baby
-War</a>&nbsp;|</strong><o:p><strong>
-<a rel="tag" href="register.html">Register</a> | <a rel="tag" href="login.html">Login</a></strong></o:p></p>
-<p style="color: fuchsia;" class="stylepink"><span style="text-decoration: underline;"><span style="font-weight: bold;"><span class="styleblue"></span></span></span><span style="font-weight: bold;">Coming Soon...</span><br style="color: rgb(0, 0, 153);">
-</p>
-<p style="color: fuchsia;" class="stylepink styleblue"><a href="index.html" rel="me"><span style="color: rgb(0, 0, 153);">RETURN TO VOTING</span></a><br>
-</p>
-<p style="color: fuchsia;" class="stylepink styleblue"><br>
-<o:p><strong></strong></o:p></p>
 </body></html>
