--- a/submit.html
+++ b/submit.html
@@ -19,8 +19,12 @@
 
 <nav>
 <a href="./index.php"><strong>Home</strong></a> | 
-<a href="./submit.html"><strong>Submit Baby Pictures</strong></a>
+<a href="./submit.html"><strong>Submit Baby Pictures</strong></a> |
+<a href="./coming.html"><strong>Beautiful Babies</strong></a> |
+<a href="./coming.html"><strong>Baby Products</strong></a> |
+<a href="./coming.html"><strong>About Baby Vote</strong></a>
 </nav>
+
 
 <section class='content'>
     <div class='center'>
