--- a/coming.html
+++ b/coming.html
@@ -26,7 +26,7 @@
     <div class="center">
     <br/>
     <br/>
-    <h1>Coming Soon...</h1>
+    <h1>Coming Very Soon...</h1>
     
     </div>
 </section>
