--- a/submit.html
+++ b/submit.html
@@ -18,11 +18,11 @@
 </header>
 
 <nav>
-<a href="./index.php"><strong>Home</strong></a> | 
-<a href="./submit.html"><strong>Submit Baby Pictures</strong></a> |
-<a href="./coming.html"><strong>Beautiful Babies</strong></a> |
-<a href="./coming.html"><strong>Baby Products</strong></a> |
-<a href="./coming.html"><strong>About Baby Vote</strong></a>
+<a href="./index.php"><strong><span>Home</span></strong></a> | 
+<a href="./submit.html"><strong><span>Submit Baby Pictures</span></strong></a> |
+<a href="./coming.html"><strong><span>Beautiful Babies</span></strong></a> |
+<a href="./coming.html"><strong><span>Baby Products</span></strong></a> |
+<a href="./coming.html"><strong><span>About Baby Vote</span></strong></a>
 </nav>
 
 
