Fixed the nav bar on every page (so about.html is accessible) Created about.html

--- a/about.html
+++ b/about.html
@@ -1,22 +1,10 @@
-<<<<<<< HEAD
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-  <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-  <meta name="keywords" content="baby,baby war,babies,best,cute,cutest,cuter,choose,cute baby,cute babies,smiling babies,smiling baby,happy baby">
-  <title>Baby War - Vote for the cutest baby!</title>
-
-</head>
-
-<!-- Head ends / Body begins -->
-=======
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html> 
 <head>
     <META http-equiv="baby-vote" content="text/html; charset=utf-8"/>
     <title>baby-vote.com</title>
     <link rel="stylesheet" type="text/css" href="style.css" charset="utf-8"/>
-  <style type="text/css">
+	<style type="text/css">
 .style1 {
 				color: #953ED0;
 }
@@ -28,28 +16,17 @@
 
 <!-- Head ends / Body begins -->
 
->>>>>>> dkauffman88/patch-6
 <body>
 <header>
 <img alt="BABY-VOTE" src="./letters/header.jpg" />
 </header>
 
-<<<<<<< HEAD
-<!-- color: rgb(52,202,186); "We are going to improve your life and the world one click at a time. Our website improves the health and happiness of all. Clinical trials have shown that viewing smiling babies improves mental and physical well-being (especially among females). Our website exploits this phenomenon and provides users with their daily-dose of Vitamin CB (Cute Babies) that they need to remain happy and healthy. We have an abundant supply of Vitamin CB and would like to share it with as many people as possible. Whether you have a few minutes or a life-time we are confident that you will be glad you visited. Also, every time you cast a vote on Baby-Vote we make a charitable donation. We are going to help you improve the world, one click at a time. A portion of all of our proceeds is allocated to help feed starving children in third world countries. Nearly 97% of the population of Tanzania lives on less than $2 a day. We are doing what we can to help reduce starvation and improve the world."  -->
-
-</body></html>
-=======
 <nav>
-<a href="./index.php"><strong><span class="style1">Home</span></strong></a><span class="style1"> | 
-</span> 
-<a href="./submit.html"><strong><span class="style1">Submit Baby Pictures</span></strong></a><span class="style1"> |
-</span>
-<a href="./beautiful.php"><strong><span class="style1">Beautiful Babies</span></strong></a><span class="style1"> |
-</span>
-<a href="./products.html"><strong><span class="style1">Baby Products</span></strong></a><span class="style1"> |
-</span>
-<a href="./about.html"><strong><span class="style1">About Baby Vote</span></strong></a><span class="style1">
-</span>
+<a href="./index.php"><strong><span>Home</span></strong></a> | 
+<a href="./submit.html"><strong><span>Submit Baby Pictures</span></strong></a> |
+<a href="./beautiful.php"><strong><span>Beautiful Babies</span></strong></a> |
+<a href="./coming.html"><strong><span>Baby Products</span></strong></a> |
+<a href="./about.html"><strong><span>About Baby Vote</span></strong></a>
 </nav>
 
 <span class="style1">
@@ -63,7 +40,24 @@
     </div>
     <div class="justify">
     <br/>
-    <strong><span class="style2">We are going to improve your life and the world, one click at a time. Our website improves the health and happiness of all. Clinical trials have shown that viewing smiling babies improves mental and physical well-being. Our website utilizes this phenomenon and provides you with your daily-dose of Vitamin CB (Cute Babies) that your need to remain happy and healthy. We have an abundant supply of Vitamin CB and would like to share it with as many people as possible. Whether you have a few minutes or a life-time, we are confident that you will be glad you visited. Also, every time you cast a vote on Baby-Vote we make a charitable donation to help feed starving children in third world countries. We are going to help you improve the world, one click at a time.  Nearly 97% of the population of Tanzania lives on less than $2 a day. We are doing what we can to help reduce starvation and improve the world.</span></strong>
+    <strong><span class="style2">We are going to improve your life and the world, one click at a time. Our website improves the health and happiness of all. Clinical trials<br>
+	<br>
+	have shown that viewing smiling babies improves mental and physical well-being. Our website utilizes this phenomenon and provides you 
+	<br>
+	<br>
+	with your daily-dose of Vitamin CB (Cute Babies) that your need to remain happy and healthy. We have an abundant supply of Vitamin 
+	<br>
+	<br>
+	CB and would like to share it with as many people as possible. Whether you have a few minutes or a life-time, we are confident that you 
+	<br>
+	<br>
+	will be glad you visited. Also, every time you cast a vote on Baby-Vote we make a charitable donation to help feed starving children in 
+	<br>
+	<br>
+	third world countries. We are going to help you improve the world, one click at a time.  Nearly 97% of the population of Tanzania lives on 
+	<br>
+	<br>
+	less than $2 a day. We are doing what we can to help reduce starvation and improve the world.</span></strong>
     </div>
     
 </section>
@@ -73,4 +67,3 @@
 </footer>
 </body>
 </html>
->>>>>>> dkauffman88/patch-6
