--- a/submit.html
+++ b/submit.html
@@ -21,7 +21,7 @@
 <a href="./index.php"><strong><span>Home</span></strong></a> | 
 <a href="./submit.html"><strong><span>Submit Baby Pictures</span></strong></a> |
 <a href="./beautiful.php"><strong><span>Beautiful Babies</span></strong></a> |
-<a href="./products.html"><strong><span>Baby Store</span></strong></a> |
+<a href="./coming.html"><strong><span>Baby Store</span></strong></a> |
 <a href="./about.html"><strong><span>About Baby Vote</span></strong></a>
 </nav>
 
