--- a/about.html
+++ b/about.html
@@ -11,7 +11,28 @@
 .style2 {
 				color: #1C7067;
 }
+.style3 {
+				font-size: medium;
+				color: #1C7067;
+}
 </style>
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-28103929-1']);
+  _gaq.push(['_setDomainName', 'baby-vote.com']);
+  _gaq.push(['_setAllowLinker', true]);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
 </head>
 
 <!-- Head ends / Body begins -->
@@ -23,9 +44,9 @@
 
 <nav>
 <a href="./index.php"><strong><span>Home</span></strong></a> | 
-<a href="./submit.html"><strong><span>Submit Baby Pictures</span></strong></a> |
+<a href="./submit.html"><strong><span class="style3">Submit Baby Pictures</span></strong></a> |
 <a href="./beautiful.php"><strong><span>Beautiful Babies</span></strong></a> |
-<a href="./coming.html"><strong><span>Baby Products</span></strong></a> |
+<a href="./products.html"><strong><span>Baby Shop</span></strong></a> |
 <a href="./about.html"><strong><span>About Baby Vote</span></strong></a>
 </nav>
 
@@ -41,21 +62,16 @@
     <div class="justify">
     <br/>
     <strong><span class="style2">We are going to improve your life and the world, one click at a time. Our website improves the health and happiness of all. Clinical trials<br>
-	<br>
+	
 	have shown that viewing smiling babies improves mental and physical well-being. Our website utilizes this phenomenon and provides you 
 	<br>
-	<br>
-	with your daily-dose of Vitamin CB (Cute Babies) that your need to remain happy and healthy. We have an abundant supply of Vitamin 
-	<br>
+	with your daily-dose of Vitamin CB (Cute Babies) that you need to remain happy and healthy. We have an abundant supply of Vitamin 
 	<br>
 	CB and would like to share it with as many people as possible. Whether you have a few minutes or a life-time, we are confident that you 
 	<br>
-	<br>
 	will be glad you visited. Also, every time you cast a vote on Baby-Vote we make a charitable donation to help feed starving children in 
 	<br>
-	<br>
 	third world countries. We are going to help you improve the world, one click at a time.  Nearly 97% of the population of Tanzania lives on 
-	<br>
 	<br>
 	less than $2 a day. We are doing what we can to help reduce starvation and improve the world.</span></strong>
     </div>
