--- a/about.html
+++ b/about.html
@@ -56,25 +56,11 @@
 </span>
 <section class="content">
     <div class="center">
-    <br/>
-    <h1 class="style2">About Us</h1>
+        <h1>About Us</h1>
     </div>
-    <div class="justify">
-    <br/>
-    <strong><span class="style2">We are going to improve your life and the world, one click at a time. Our website improves the health and happiness of all. Clinical trials<br>
-	
-	have shown that viewing smiling babies improves mental and physical well-being. Our website utilizes this phenomenon and provides you 
-	<br>
-	with your daily-dose of Vitamin CB (Cute Babies) that you need to remain happy and healthy. We have an abundant supply of Vitamin 
-	<br>
-	CB and would like to share it with as many people as possible. Whether you have a few minutes or a life-time, we are confident that you 
-	<br>
-	will be glad you visited. Also, every time you cast a vote on Baby-Vote we make a charitable donation to help feed starving children in 
-	<br>
-	third world countries. We are going to help you improve the world, one click at a time.  Nearly 97% of the population of Tanzania lives on 
-	<br>
-	less than $2 a day. We are doing what we can to help reduce starvation and improve the world.</span></strong>
-    </div>
+    
+    <p class='medium'>
+    We are going to improve your life and the world, one click at a time. Our website improves the health and happiness of all. Clinical trials have shown that viewing smiling babies improves mental and physical well-being. Our website utilizes this phenomenon and provides you with your daily-dose of Vitamin CB (Cute Babies) that you need to remain happy and healthy. We have an abundant supply of Vitamin CB and would like to share it with as many people as possible. Whether you have a few minutes or a life-time, we are confident that you will be glad you visited. Also, every time you cast a vote on Baby-Vote we make a charitable donation to help feed starving children in third world countries. We are going to help you improve the world, one click at a time.  Nearly 97% of the population of Tanzania lives on less than $2 a day. We are doing what we can to help reduce starvation and improve the world.</p>
     
 </section>
 <!-- Content Ends Here -->
