Fixed the login issues

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 		<title>Emerson</title>
 	</head>
 <body>
-    <h1>Fucking Emerson</h1>
+    <h1>The Login Page!</h1>
 	<table style="margin:15px auto;" align="center">
 		<tr>
 			<td colspan="3">Please enter your login information:</td>
